--- a/page-test/pom.xml
+++ b/page-test/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>page-test</artifactId>
-    <packaging>jar</packaging>
+
 
     <dependencies>
         <dependency>
@@ -43,16 +43,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-        </plugins>
-    </build>
+
 
 </project>
